0.3.0
  BugFix in anchor output when pkg list is empty.

0.2.0
  BugFix: anchor navigation fixes.
  BugFix: the name of some dependencies were not being shown correctly.
  BugFix: list of dependencies was not sorted.
  BugFix: outdated pkg list was not sorted.
  BugFix: When user closed searchbar inside a QTextBrowser, cursor position was reseted.
  BugFix: Do not refresh pkg lists while clicking remote/local buttons.
  BugFix: Fix gksu "-- f parameter" execution error.
  BugFix: When trying to install a Ports pkg not available in database, shows error 
	(thanks to asxbsd).
  BugFix: List of outdated packages not being retrieved in some cases.
  Let user removes any automatic installed package.
  Remove commands now use -R option.
  Added DragonFlyBSD support.
  Added GhostBSD support (thanks to ringo32 and rkramerbsd). 
  Added search feature also in Information tab.
  Heavily threaded version, minimizing interface freezing.

0.1.0 
  Initial Proof of Concept release.