@@ -1351,120 +1351,3 @@ void MainWindow::tvPackagesSelectionChanged(const QItemSelection&, const QItemSe
   m_lblTotalCounters->setText(text);
   m_lblSelCounter->setText(newMessage);
 }
-
-/*
-void MainWindow::gistSysInfo()
-{
-  if (!UnixCommand::hasTheExecutable("gist") ||
-      m_commandExecuting != ectn_NONE) return;
-
-  CPUIntensiveComputing *cic = new CPUIntensiveComputing(this);
-  disableTransactionActions();
-  QTime time = QTime::currentTime();
-  qsrand(time.minute() + time.second() + time.msec());
-  QFile *tempFile = new QFile(ctn_TEMP_ACTIONS_FILE + QString::number(qrand()));
-  tempFile->open(QIODevice::ReadWrite|QIODevice::Text);
-  tempFile->setPermissions(QFile::Permissions(QFile::ExeOwner|QFile::ReadOwner));
-
-  QByteArray out;
-
-  if (UnixCommand::getBSDFlavour() == ectn_KAOS)
-  {
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-    tempFile->write("cat /etc/KaOS-release\n");
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-    out = UnixCommand::getCommandOutput("cat /etc/KaOS-release");
-    tempFile->write(out);
-    tempFile->write("\n\n");
-  }
-  else
-  {
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-    tempFile->write("cat /etc/lsb-release\n");
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-    out = UnixCommand::getCommandOutput("cat /etc/lsb-release");
-    tempFile->write(out);
-    tempFile->write("\n\n");
-  }
-
-  if (UnixCommand::hasTheExecutable("inxi"))
-  {
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-    tempFile->write("inxi -Fxz\n");
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-    out = UnixCommand::getCommandOutput("inxi -Fxz -c 0");
-    tempFile->write(out);
-    tempFile->write("\n\n");
-  }
-  else
-  {
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-    tempFile->write("uname -a\n");
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-    out = UnixCommand::getCommandOutput("uname -a");
-    tempFile->write(out);
-    tempFile->write("\n\n");
-  }
-
-  if (UnixCommand::hasTheExecutable("mhwd"))
-  {
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-    tempFile->write("mhwd -li -d\n");
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-    out = UnixCommand::getCommandOutput("mhwd -li -d");
-    tempFile->write(out);
-    tempFile->write("\n\n");
-  }
-
-  tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-  tempFile->write("journalctl -b -p err\n");
-  tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-  out = UnixCommand::getCommandOutput("journalctl -b -p err");
-  tempFile->write(out);
-  tempFile->write("\n\n");
-
-  tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-  tempFile->write("cat /etc/pacman.conf\n");
-  tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-  out = UnixCommand::getCommandOutput("cat /etc/pacman.conf");
-  tempFile->write(out);
-  tempFile->write("\n\n");
-
-  tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-  tempFile->write("pacman -Qm\n");
-  tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-  out = UnixCommand::getCommandOutput("pacman -Qm");
-  tempFile->write(out);
-  tempFile->write("\n\n");
-
-  if (UnixCommand::getBSDFlavour() == ectn_KAOS)
-  {
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-    tempFile->write("cat /var/log/pacman.log\n");
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-    out = UnixCommand::getCommandOutput("cat /var/log/pacman.log");
-    tempFile->write(out);
-    tempFile->flush();
-    tempFile->close();
-  }
-  else
-  {
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n");
-    tempFile->write("head --bytes=256K /var/log/pacman.log\n");
-    tempFile->write("----------------------------------------------------------------------------------------------------------\n\n");
-    out = UnixCommand::getCommandOutput("head --bytes=256K /var/log/pacman.log");
-    tempFile->write(out);
-    tempFile->flush();
-    tempFile->close();
-  }
-
-  enableTransactionActions();
-
-  //Now we gist the temp file just created!
-  QString gist = UnixCommand::getCommandOutput("gist " + tempFile->fileName());
-  delete cic;
-
-  QString distroPrettyName = UnixCommand::getLinuxDistroPrettyName();
-  QMessageBox::information(this, distroPrettyName + " SysInfo", Package::makeURLClickable(gist), QMessageBox::Ok);
-}
-*/
